fix css wrap padding

--- a/07-04-2017/app/scss/master/_theme.scss
+++ b/07-04-2017/app/scss/master/_theme.scss
@@ -273,12 +273,13 @@
 .wrap {
     background: $white;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
-    padding: 70px 0;
+    padding: 70px 0 0;
     width: 860px;
 }
 
 .books {
     background: #c6e7f9 url(../images/common/header_content.png);
+    padding-bottom: 146px;
 
     .product-list {
         margin: 40px 0;
